fixing broken assets in github pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="info-card flex-row">
-      <img src="assets/states-served.png" alt="Map of NorthEast USA">
+      <img src="{{ env.assetPath }}assets/states-served.png" alt="Map of NorthEast USA">
 
       <div class="padding-left-30">
         <h2>States we serve</h2>
@@ -132,7 +132,7 @@
 
   <div class="flex-row">
     <div class="terra-resource">
-      <img src="assets/terra-logo.png" width=200>
+      <img src="{{ env.assetPath }}assets/terra-logo.png" width=200>
       <h3>Terra Covid Workspaces</h3>
       <div class="margin-top-10">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -142,7 +142,7 @@
     </div>
 
     <div class="broad-resource">
-      <img src="assets/resources-2.png" height=200>
+      <img src="{{ env.assetPath }}assets/resources-2.png" height=200>
       <h3>Broad SARS Cov-2 Auspice</h3>
 
       <div class="margin-top-10">
@@ -155,7 +155,7 @@
 </div>
 
 <div id="acknowledgments-container" class="content-container content-container-black">
-  <img src="assets/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
+  <img src="{{ env.assetPath }}assets/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
 
   <h2>Acknowledgements</h2>
   <div class="flex-row">
