updated css so it will look better on larger monitors

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -89,7 +89,7 @@
 }
 
 #resources-container {
-    & > .flex-row {
+    .content > .flex-row {
         margin: 0 -40px;
         align-items: flex-start;
 
