--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,8 @@
   </div>
 </div>
 
-<div id="introduction-container" class="content-container flex-row">
+<div id="introduction-container" class="content-container">
+  <div class="content flex-row">
     <div class="description">
       The Broad Institute is sequencing the genomes of SARS-CoV-2 viruses
       from residual diagnostic samples to monitor for known and emerging
@@ -50,121 +51,151 @@
         </div>
       </div>
     </div>
+  </div>
 </div>
 
 <div id="scaling-container" class="content-container content-container-merge">
-  <h2>Scaling up viral sequencing at the Broad Institute</h2>
+  <div class="content">
+    <h2>Scaling up viral sequencing at the Broad Institute</h2>
 
-  <div class="flex-row">
-    <div class="text">
-      <p>We are scaling our ability to sequence SARS-CoV-2 from COVID-positive 
-      diagnostic samples. Here we show the number of samples being processed 
-      each week at the Broad. We strive to generate and share data within 14 
-      days of sample collection. We work with public health officials and 
-      epidemiologists to ensure our sampling strategy is representative and 
-      provides useful information about priorities for the COVID-19 response.</p>
+    <div class="flex-row">
+      <div class="text">
+        <p>We are scaling our ability to sequence SARS-CoV-2 from COVID-positive 
+        diagnostic samples. Here we show the number of samples being processed 
+        each week at the Broad. We strive to generate and share data within 14 
+        days of sample collection. We work with public health officials and 
+        epidemiologists to ensure our sampling strategy is representative and 
+        provides useful information about priorities for the COVID-19 response.</p>
 
-      <p><strong>Note:</strong> These numbers reflect only samples sequenced at 
-      the Broad Institute and do not include samples sequenced by other 
-      sources. Numbers may differ from other public dashboards due to time 
-      lags in updating across multiple sites. This dashboard is updated 
-      weekly.</p>
+        <p><strong>Note:</strong> These numbers reflect only samples sequenced at 
+        the Broad Institute and do not include samples sequenced by other 
+        sources. Numbers may differ from other public dashboards due to time 
+        lags in updating across multiple sites. This dashboard is updated 
+        weekly.</p>
 
-      <p>For complete reporting of variants, please visit the <a href="#">
-        CDC - US COVID-19 Cases Caused by Variants
-      </a></p>
-    </div>
+        <p>For complete reporting of variants, please visit the <a href="#">
+          CDC - US COVID-19 Cases Caused by Variants
+        </a></p>
+      </div>
 
-    <div>
-      <zingchart-angular [config]="config" [width]="scalingChartWidth"></zingchart-angular>
+      <div>
+        <zingchart-angular [config]="config" [width]="scalingChartWidth"></zingchart-angular>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="content-container content-container-accent">
-  <h2>The Broad Institute's COVID-19 viral sequencing effort</h2>
+  <div class="content">
+    <h2>The Broad Institute's COVID-19 viral sequencing effort</h2>
 
-  <div class="margin-top-25">
-    With support from the CDC, the Broad has launched an effort to perform large-scale sequencing of SARS-CoV-2 for variant surveillance and pbulic health response in the Northeast. The Viral Genomics Group and Genomics Platform are working together to sequence the virus from thousands of COVID-19 positive samples each week from the institute's diagnostics lab, with bioinformatics support from the Data Sciences Platform. The results are currently being shared with public health partners to help slow the spread of concerning variants, and with the scientific community to learn more about the evolution and spread of SARS-CoV-2.
-  <br/>
-  Learn more in a <a href="#">Broad news story and video</a>.</div>
+    <div class="margin-top-25">
+      With support from the CDC, the Broad has launched an effort to perform large-scale 
+      sequencing of SARS-CoV-2 for variant surveillance and pbulic health response in the 
+      Northeast. The Viral Genomics Group and Genomics Platform are working together to 
+      sequence the virus from thousands of COVID-19 positive samples each week from the 
+      institute's diagnostics lab, with bioinformatics support from the Data Sciences 
+      Platform. The results are currently being shared with public health partners to help 
+      slow the spread of concerning variants, and with the scientific community to learn 
+      more about the evolution and spread of SARS-CoV-2.
+    <br/>
+    Learn more in a <a href="#">Broad news story and video</a>.</div>
+  </div>
 </div>
 
 <div class="content-container">
-  <h2>COVID-19 variant tracking</h2>
+  <div class="content">
+    <h2>COVID-19 variant tracking</h2>
 
-  <p><a href="#">CDC.gov SARS-CoV-2 Variant Classifications and Definitions</a></p>
+    <p><a href="#">CDC.gov SARS-CoV-2 Variant Classifications and Definitions</a></p>
 
-  <div class="margin-top-5">
-    The CDC defines SARS-Cov-2 variants according to three classes:
-  
-    <div class="margin-top-10">
-      <strong>
-        Variant of Interest<br/>
-        Variant of Concern<br/>
-        Variant of High Consequence<br/>
-      </strong>
+    <div class="margin-top-5">
+      The CDC defines SARS-Cov-2 variants according to three classes:
+    
+      <div class="margin-top-10">
+        <strong>
+          Variant of Interest<br/>
+          Variant of Concern<br/>
+          Variant of High Consequence<br/>
+        </strong>
+      </div>
     </div>
+
+    <p>
+      Currently the B.1.1.7, B.1.351, B.1.427, and B.1.429 variants circulating in the 
+      United States are classified as Variants of Concern.<br/>
+      The B.1.525, B.1.526, and P.2 viral lineages are classified as Variants of Interest.
+    </p>
+
+    <p>As of now there are no viral lineages classified as Variants of High Consequence. 
+      We are tracking known Variants or Concern and of Interest. The numbers of each detected 
+      are reported here. We are also monitoring the genomic data for new variants worthy of 
+      additional investigation and monitoring as possible emerging threats.</p>
+
+    <p><strong>Note:</strong> These numbers reflect only samples sequenced at the Broad 
+      Institute and do not include samples sequenced by other sources. Numbers may differ 
+      from other public dashboards due to time lags in updating across multiple sites. This 
+      dashboard is updated weekly.</p>
+
+    <p>For complete reporting of variants, please visit the <a href="#">CDC - US COVID-19 
+      Cases Caused by Variants</a></p>
   </div>
-
-  <p>
-    Currently the B.1.1.7, B.1.351, B.1.427, and B.1.429 variants circulating in the United States are classified as Variants of Concern.<br/>
-    The B.1.525, B.1.526, and P.2 viral lineages are classified as Variants of Interest.
-  </p>
-
-  <p>As of now there are no viral lineages classified as Variants of High Consequence. We are tracking known Variants or Concern and of Interest. The numbers of each detected are reported here. We are also monitoring the genomic data for new variants worthy of additional investigation and monitoring as possible emerging threats.</p>
-
-  <p><strong>Note:</strong> These numbers reflect only samples sequenced at the Broad Institute and do not include samples sequenced by other sources. Numbers may differ from other public dashboards due to time lags in updating across multiple sites. This dashboard is updated weekly.</p>
-
-  <p>For complete reporting of variants, please visit the <a href="#">CDC - US COVID-19 Cases Caused by Variants</a></p>
-
 </div>
 
 <div id="variant-container" class="content-container">
-  <h2>Weekly counts of variants detected at the Broad Institute</h2>
-  <div class="flex-col">
-    <zingchart-angular [config]="config" [width]="800"></zingchart-angular>
+  <div class="content">
+    <h2>Weekly counts of variants detected at the Broad Institute</h2>
+    <div class="flex-col">
+      <zingchart-angular [config]="config" [width]="800"></zingchart-angular>
+    </div>
   </div>
 </div>
 
 <div id="resources-container" class="content-container content-container-alt">
-  <h2>More resources</h2>
+  <div class="content">
+    <h2>More resources</h2>
 
-  <div class="flex-row">
-    <div class="terra-resource">
-      <img src="{{ env.assetPath }}assets/terra-logo.png" width=200>
-      <h3>Terra Covid Workspaces</h3>
-      <div class="margin-top-10">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <div class="flex-row">
+      <div class="terra-resource">
+        <img src="{{ env.assetPath }}assets/terra-logo.png" width=200>
+        <h3>Terra Covid Workspaces</h3>
+        <div class="margin-top-10">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </div>
+        <a href="#">COVID-19_Broad_virl_NGS</a><br>
+        <a href="#">COVID-19_cross_tissue_analysis</a>
       </div>
-      <a href="#">COVID-19_Broad_virl_NGS</a><br>
-      <a href="#">COVID-19_cross_tissue_analysis</a>
-    </div>
 
-    <div class="broad-resource">
-      <img src="{{ env.assetPath }}assets/resources-2.png" height=200>
-      <h3>Broad SARS Cov-2 Auspice</h3>
+      <div class="broad-resource">
+        <img src="{{ env.assetPath }}assets/resources-2.png" height=200>
+        <h3>Broad SARS Cov-2 Auspice</h3>
 
-      <div class="margin-top-10">
-        View the Broad's SARS-CoV-2 interactive visualizations built using Auspice, a tool from the Fred Hutch and the Bedford Lab.
+        <div class="margin-top-10">
+          View the Broad's SARS-CoV-2 interactive visualizations built using Auspice, a 
+          tool from the Fred Hutch and the Bedford Lab.
+        </div>
+        <a href="#">Read More</a><br/>
+        <a href="#">auspice.broadinstitute.org</a>
       </div>
-      <a href="#">Read More</a><br/>
-      <a href="#">auspice.broadinstitute.org</a>
     </div>
   </div>
 </div>
 
 <div id="acknowledgments-container" class="content-container content-container-black">
-  <img src="{{ env.assetPath }}assets/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
+  <div class="content">
+    <img src="{{ env.assetPath }}assets/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
 
-  <h2>Acknowledgements</h2>
-  <div class="flex-row">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
+    <h2>Acknowledgements</h2>
+    <div class="flex-row">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      </p>
 
-    <p>
-      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+      <p>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
   </div>
 </div>
