--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,18 +36,25 @@
       COVID-19.
     </div>
 
-    <div class="info-card flex-row">
-      <img src="{{ env.assetPath }}assets/states-served.png" alt="Map of NorthEast USA">
+    <div class="info-card">
+      <div class="flex-row">
+        <img src="{{ env.assetPath }}assets/images/states-served.png" alt="Map of NorthEast USA">
 
-      <div class="padding-left-30">
-        <h2>States we serve</h2>
-      
-        <div>
-          The majority of samples sequenced are residual diagnostic samples from the
-          <a href="#">Broad's large scale testing platform</a>. Many of these samples
-          come from Massachusetts and the Northeast region more broadly. We also 
-          receive samples from external contributors including hospitals, public
-          health departments, diagnostic labs and research labs.
+        <div class="padding-left-30">
+          <h2>States we serve</h2>
+        
+          <div>
+            The majority of samples sequenced are residual diagnostic samples from the
+            <a href="#">Broad's large scale testing platform</a>. Many of these samples
+            come from Massachusetts and the Northeast region more broadly. We also 
+            receive samples from external contributors including hospitals, public
+            health departments, diagnostic labs and research labs.
+          </div>
+        </div>
+      </div>
+      <div class="state-list flex-col">
+        <div *ngFor="let state of statesServed" class="state-container flex-row">
+          <div class="state-icon" [attr.aria-hidden]="true" [style.transform]="state.rotation">{{ state.glyph }}</div> {{ state.name }}
         </div>
       </div>
     </div>
@@ -107,7 +114,7 @@
   <div class="content">
     <h2>COVID-19 variant tracking</h2>
 
-    <p><a href="#">CDC.gov SARS-CoV-2 Variant Classifications and Definitions</a></p>
+    <p><a href="#"><i class="fa fa-external-link"></i> CDC.gov SARS-CoV-2 Variant Classifications and Definitions</a></p>
 
     <div class="margin-top-5">
       The CDC defines SARS-Cov-2 variants according to three classes:
@@ -146,7 +153,7 @@
   <div class="content">
     <h2>Weekly counts of variants detected at the Broad Institute</h2>
     <div class="flex-col">
-      <zingchart-angular [config]="config" [width]="800"></zingchart-angular>
+      <zingchart-angular [config]="config" [width]="1200"></zingchart-angular>
     </div>
   </div>
 </div>
@@ -157,19 +164,19 @@
 
     <div class="flex-row">
       <div class="terra-resource">
-        <img src="{{ env.assetPath }}assets/terra-logo.png" width=200>
+        <img src="{{ env.assetPath }}assets/images/terra-logo.png" width=200>
         <h3>Terra Covid Workspaces</h3>
         <div class="margin-top-10">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
           exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </div>
-        <a href="#">COVID-19_Broad_virl_NGS</a><br>
-        <a href="#">COVID-19_cross_tissue_analysis</a>
+        <a href="#"><i class="fa fa-external-link"></i> COVID-19_Broad_virl_NGS</a><br>
+        <a href="#"><i class="fa fa-external-link"></i> COVID-19_cross_tissue_analysis</a>
       </div>
 
       <div class="broad-resource">
-        <img src="{{ env.assetPath }}assets/resources-2.png" height=200>
+        <img src="{{ env.assetPath }}assets/images/resources-2.png" height=200>
         <h3>Broad SARS Cov-2 Auspice</h3>
 
         <div class="margin-top-10">
@@ -177,7 +184,7 @@
           tool from the Fred Hutch and the Bedford Lab.
         </div>
         <a href="#">Read More</a><br/>
-        <a href="#">auspice.broadinstitute.org</a>
+        <a href="#"><i class="fa fa-external-link"></i> auspice.broadinstitute.org</a>
       </div>
     </div>
   </div>
@@ -185,7 +192,7 @@
 
 <div id="acknowledgments-container" class="content-container content-container-black">
   <div class="content">
-    <img src="{{ env.assetPath }}assets/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
+    <img src="{{ env.assetPath }}assets/images/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
 
     <h2>Acknowledgements</h2>
     <div class="flex-row">
