--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,6 +1,8 @@
+
 @font-face {
     font-family: 'StateFace';
-    src: url(/assets/fonts/StateFace-Regular.otf);
+    src: url('/broad-covid-dashboard/assets/fonts/StateFace-Regular.otf');
+    src: url('/assets/fonts/StateFace-Regular.otf');
 }
 
 .state-icon {
