just hard coding the location for now. It allows it to work no matter what env it's in. :(

--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,8 +1,8 @@
 
 @font-face {
     font-family: 'StateFace';
-    src: url('/broad-covid-dashboard/assets/fonts/StateFace-Regular.otf');
-    src: url('/assets/fonts/StateFace-Regular.otf');
+    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/StateFace-Regular.otf');
+    // src: url('/assets/fonts/StateFace-Regular.otf');
 }
 
 .state-icon {
