--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
         
           <div>
             The majority of samples sequenced are residual diagnostic samples from the
-            <a href="#">Broad's large scale testing platform</a>. Many of these samples
+            <a class="btn-link" href="#">Broad's large scale testing platform</a>. Many of these samples
             come from Massachusetts and the Northeast region more broadly. We also 
             receive samples from external contributors including hospitals, public
             health departments, diagnostic labs and research labs.
@@ -80,7 +80,7 @@
         lags in updating across multiple sites. This dashboard is updated 
         weekly.</p>
 
-        <p>For complete reporting of variants, please visit the <a href="#">
+        <p>For complete reporting of variants, please visit the <a class="btn-link" href="#">
           CDC - US COVID-19 Cases Caused by Variants
         </a></p>
       </div>
@@ -106,7 +106,7 @@
       slow the spread of concerning variants, and with the scientific community to learn 
       more about the evolution and spread of SARS-CoV-2.
     <br/>
-    Learn more in a <a href="#">Broad news story and video</a>.</div>
+    Learn more in a <a class="btn-link-white" href="#">Broad news story and video</a>.</div>
   </div>
 </div>
 
@@ -114,7 +114,7 @@
   <div class="content">
     <h2>COVID-19 variant tracking</h2>
 
-    <p><a href="#"><i class="fa fa-external-link"></i> CDC.gov SARS-CoV-2 Variant Classifications and Definitions</a></p>
+    <p><a class="btn-link" href="#"><i class="fa fa-external-link"></i> CDC.gov SARS-CoV-2 Variant Classifications and Definitions</a></p>
 
     <div class="margin-top-5">
       The CDC defines SARS-Cov-2 variants according to three classes:
@@ -144,7 +144,7 @@
       from other public dashboards due to time lags in updating across multiple sites. This 
       dashboard is updated weekly.</p>
 
-    <p>For complete reporting of variants, please visit the <a href="#">CDC - US COVID-19 
+    <p>For complete reporting of variants, please visit the <a class="btn-link" href="#">CDC - US COVID-19 
       Cases Caused by Variants</a></p>
   </div>
 </div>
@@ -171,8 +171,8 @@
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
           exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </div>
-        <a href="#"><i class="fa fa-external-link"></i> COVID-19_Broad_virl_NGS</a><br>
-        <a href="#"><i class="fa fa-external-link"></i> COVID-19_cross_tissue_analysis</a>
+        <a class="btn-link" href="#"><i class="fa fa-external-link"></i> COVID-19_Broad_virl_NGS</a><br>
+        <a class="btn-link" href="#"><i class="fa fa-external-link"></i> COVID-19_cross_tissue_analysis</a>
       </div>
 
       <div class="broad-resource">
@@ -183,8 +183,8 @@
           View the Broad's SARS-CoV-2 interactive visualizations built using Auspice, a 
           tool from the Fred Hutch and the Bedford Lab.
         </div>
-        <a href="#">Read More</a><br/>
-        <a href="#"><i class="fa fa-external-link"></i> auspice.broadinstitute.org</a>
+        <a class="btn-link" href="#">Read More</a><br/>
+        <a class="btn-link" href="#"><i class="fa fa-external-link"></i> auspice.broadinstitute.org</a>
       </div>
     </div>
   </div>
