updated style for header to fill for larger websites

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,31 @@
-<div id="header-container" class="flex-row">
-  <h1 class="flex-row">
-    Broad Institute COVID-19 Viral Sequencing<br/>
-    and Genomics Surveillance
-  </h1>
-
-  <div class="stat-box">
-    <div class="label">Last Updated:</div>
-    <div class="value">04/19/21</div>
-    <div class="detail">Updated Weekly</div>
-  </div>
-
-  <div class="stat-box stat-box-accent flex-col">
-    <div class="flex-row">
-      <div class="margin-right-10">
-        <div class="label">Total Samples Sequenced:</div>
-        <div class="value">3,017</div>
+<div id="header-container" class="content-container">
+  <div class="content flex-row">
+    <h1 class="flex-row">
+      Broad Institute COVID-19 Viral Sequencing<br/>
+      and Genomics Surveillance
+    </h1>
+  
+    <div class="stat-box">
+      <div class="label">Last Updated:</div>
+      <div class="value">04/19/21</div>
+      <div class="detail">Updated Weekly</div>
+    </div>
+  
+    <div class="stat-box stat-box-accent flex-col">
+      <div class="flex-row">
+        <div class="margin-right-10">
+          <div class="label">Total Samples Sequenced:</div>
+          <div class="value">3,017</div>
+        </div>
+    
+        <div>
+          <div class="label">Percent Sequenced:</div>
+          <div class="value">15%</div>
+        </div>
       </div>
   
-      <div>
-        <div class="label">Percent Sequenced:</div>
-        <div class="value">15%</div>
-      </div>
+      <div class="detail">*Percent of positive diagnostic tests sequenced this week</div>
     </div>
-
-    <div class="detail">*Percent of positive diagnostic tests sequenced this week</div>
   </div>
 </div>
 
