--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,12 @@
 
 #header-container {
     width: 100%;
+    box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, .05);
+    background: linear-gradient(90deg, $color-primary 50%, $color-accent 50%);
+
+    .content {
+        padding: 0;
+    }
 
     h1 {
         color: white;
