--- a/src/styles/links.scss
+++ b/src/styles/links.scss
@@ -6,7 +6,7 @@
     transition: 0.3s color ease-in-out;
 
     &:hover, &:focus {
-        color: rgb(36, 199, 199);
+        color: $color-primary-light;
     }
 }
 
@@ -18,6 +18,6 @@
     transition: 0.3s color ease-in-out;
 
     &:hover, &:focus {
-        color: rgb(36, 199, 199);
+        color: $color-primary-light;
     }
 }
