--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,14 +47,14 @@
 
 <div id="introduction-container" class="content-container">
   <div class="content flex-row">
-    <div class="description" data-aos="fade-in">
+    <div class="description">
       The Broad Institute is sequencing the genomes of SARS-CoV-2 viruses
       from residual diagnostic samples to monitor for known and emerging
       variants of concern, and to support the public health response to
       COVID-19.
     </div>
 
-    <div class="info-card" data-aos="fade-up">
+    <div class="info-card">
       <div class="flex-row">
         <img src="{{ env.assetPath }}assets/images/states-served.png" alt="Map of NorthEast USA">
 
