--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,6 @@
-$color-primary: #046db6;
+$color-primary: #006DB6;
 $color-primary-light: rgb(36, 199, 199);
-$color-accent: #a5d07a;
+$color-accent: #A4D07A;
 
 $color-background: #ecf4f7;
-$color-text: #475564;
+$color-text: #485465;
