--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -152,6 +152,13 @@
     }
 }
 
+#variants-container {
+    .content + .flex-row {
+        align-items: flex-start;
+        margin-top: 30px;
+    }
+}
+
 #resources-container {
     position: relative;
     z-index: 50;
