--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'colors';
+@import 'styles/theme';
 @import 'styles/display';
 @import 'styles/typography';
 @import 'styles/icons';
 @import 'styles/links';
+@import 'styles/buttons';
 
 body {
     margin: 0;
