--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -6,10 +6,23 @@
 
 @font-face {
     font-family: 'DIN Pro';
+    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Light.otf');
+    src: url('/assets/fonts/DINPro Light.otf');
+    font-weight: 100;
+}
+@font-face {
+    font-family: 'DIN Pro';
     src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Regular.otf');
     // src: url('/assets/fonts/DINPro Regular.otf');
-    
+    font-weight: 400;
 }
+@font-face {
+    font-family: 'DIN Pro';
+    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Medium.otf');
+    // src: url('/assets/fonts/DINPro Medium.otf');
+    font-weight: 500;
+}
+
 @font-face {
     font-family: 'DIN Pro';
     src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Bold.otf');
