--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -6,8 +6,8 @@
 
 @font-face {
     font-family: 'DIN Pro';
-    // src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Light.otf');
-    src: url('/assets/fonts/DINPro Light.otf');
+    src: url('https://asymmetrik.github.io/broad-covid-dashboard/assets/fonts/DINPro Light.otf');
+    // src: url('/assets/fonts/DINPro Light.otf');
     font-weight: 100;
 }
 @font-face {
