--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,7 +85,8 @@
 #introduction-container {
     .content.flex-row {
         padding-right: 0;
-        margin-top: 0;
+        margin: 0;
+        max-width: unset;
 
         @media screen and (max-width: 1000px) {
             display: inline-block;
