--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -149,10 +149,18 @@
 #scaling-container {
     .flex-row {
         justify-content: space-between;
+
+        @media screen and (max-width: 1100px) {
+            display: block;
+        }
     }
 
     .description {
-        width: 30%;
+        width: 37%;
+
+        @media screen and (max-width: 1100px) {
+            width: 100%;
+        }
     }
 }
 
