--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
 $color-primary: #006DB6;
-$color-primary-light: rgb(36, 199, 199);
+$color-primary-light: #00AFD7;
 $color-accent: #A4D07A;
 
 $color-background: #ecf4f7;
