--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,44 @@
 @import 'colors';
 
 #navbar {
+    background-color: white;
+    width: 100%;
+    position: relative;
+    z-index: 100;
+
     .content {
         justify-content: space-between;
         padding: 0;
+    }
+
+    .logo {
+        height: 100%;
+        min-width: 160px;
+        max-width: 250px;
+        transition: .3s ease-in-out transform;
+    }
+
+    .terra-logo {
+        height: 100%;
+        min-width: 100px;
+        max-width: 150px;
+        transition: .3s ease-in-out transform;
     }
 
     .navbar-link {
         padding: 30px;
         height: 40px;
         text-transform: uppercase;
+        font-family: 'DIN Pro';
         font-weight: bold;
         font-size: 16px;
-        transition: .3s ease-in-out color;
+        line-height: 0;
+        transition: .3s ease-in-out color, .3s ease-in-out height;
         justify-content: flex-end;
         cursor: pointer;
+        background-color: transparent;
+        border: 0;
+        flex-shrink: 0;
 
         &.active {
             color: $color-primary;
@@ -62,12 +86,13 @@
         .value {
             font-size: 40px;
             font-weight: bold;
-            margin: 12px 0;
+            margin: 20px 0;
         }
 
         .detail {
             color: $color-text;
             font-size: 14px;
+            line-height: 14px;
             font-weight: normal;
         }
 
@@ -85,8 +110,6 @@
 #introduction-container {
     .content.flex-row {
         padding-right: 0;
-        margin: 0;
-        max-width: unset;
 
         @media screen and (max-width: 1000px) {
             display: inline-block;
@@ -157,6 +180,7 @@
 
     .description {
         width: 37%;
+        padding-right: 60px;
 
         @media screen and (max-width: 1100px) {
             width: 100%;
