--- a/src/styles/display.scss
+++ b/src/styles/display.scss
@@ -148,3 +148,25 @@
 	}
 }
 
+html:not([data-scroll='0']) {
+	padding-top: 75px;
+
+	#navbar {
+		position: fixed;
+		top: 0;
+		box-shadow: 0px 5px 15px 5px rgba(0, 0, 0, .1);
+		height: 60px;
+
+		.navbar-link {
+			height: 20px;
+		}
+
+		.logo {
+			max-width: 160px !important;
+		}
+
+		.terra-logo {
+			max-width: 100px !important;
+		}
+	}
+}
