--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -176,7 +176,9 @@
   <div class="content">
     <h2>Weekly counts of variants detected at the Broad Institute</h2>
     <div class="flex-row">
-      <plotly-plot [divId]="variantsChartId" [data]="variantsChart.data" [layout]="variantsChart.layout"></plotly-plot>
+      <div class="margin-right-30">
+        <plotly-plot [divId]="variantsChartId" [data]="variantsChart.data" [layout]="variantsChart.layout"></plotly-plot>
+      </div>
 
       <div class="chart-controls">
         <div class="control-group" *ngFor="let controlGroup of variantsData.groups">
