Initial code update - HTML with mocked data. Moved from https://github.com/Asymmetrik/broad-tsv-converter

--- a/src/styles/display.scss
+++ b/src/styles/display.scss
@@ -158,7 +158,7 @@ html:not([data-scroll='0']) {
 		height: 60px;
 
 		.navbar-link {
-			height: 20px;
+			height: 20px !important;
 		}
 
 		.logo {
