added cors policy and instructions on how to update the gcp bucket to allow the site to read this file, updated site according to documented updates

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -230,11 +230,11 @@
 
     img {
         width: 180px;
-        float: right;
-        padding-left: 100px;
     }
 
     .flex-row {
+        justify-content: flex-end;
+
         p {
             font-size: .9rem;
             margin-right: 80px;
