--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,6 @@
   <div class="content flex-row">
     <img class="logo" src="{{ env.assetPath }}assets/images/logo.png" alt="Broad Institute Logo">
 
-    <div class="navbar-links flex-row">
-      <button *ngFor="let link of navbarLinks; let i = index"
-        class="navbar-link flex-col"
-        [class.active]="link.id === activeSection"
-        (click)="scrollToId(link.id, $event)">
-        {{ link.title }}
-      </button>
-    </div>
-
     <img class="terra-logo" src="{{ env.assetPath }}assets/images/powered-by-terra.png" alt="Powered by Terra">
   </div>
 </div>
@@ -18,8 +9,7 @@
 <div id="header-container" class="content-container">
   <div class="content flex-row">
     <h1 class="flex-row">
-      Broad Institute COVID-19 Viral Sequencing<br/>
-      and Genomics Surveillance
+      COVID-19 Genomic Surveillance
     </h1>
   
     <div class="stat-box">
@@ -29,30 +19,21 @@
     </div>
   
     <div class="stat-box stat-box-accent flex-col">
-      <div class="flex-row">
         <div class="margin-right-10">
           <div class="label">Total Samples Sequenced:</div>
-          <div class="value">3,017</div>
-        </div>
-    
-        <div>
-          <div class="label">Percent Sequenced:</div>
-          <div class="value">15%</div>
+          <div class="value" *ngIf="data.totalSamplesSequenced">{{ data.totalSamplesSequenced | number }}</div>
+          <div class="value" *ngIf="!data.totalSamplesSequenced">--</div>
         </div>
       </div>
-  
-      <div class="detail">*Percent of positive diagnostic tests sequenced this week</div>
-    </div>
   </div>
 </div>
 
 <div id="introduction-container" class="content-container">
   <div class="content flex-row">
     <div class="description" data-aos="fade-in">
-      The Broad Institute is sequencing the genomes of SARS-CoV-2 viruses
-      from residual diagnostic samples to monitor for known and emerging
-      variants of concern, and to support the public health response to
-      COVID-19.
+      The Broad Institute is sequencing the genetic code of SARS-CoV-2 viruses to
+      monitor for known and emerging variants of concern, to support public health response
+      to COVID-19.
     </div>
 
     <div class="info-card" data-aos="fade-left" data-aos-delay="300 ">
@@ -63,11 +44,11 @@
           <h2>States we serve</h2>
         
           <div>
-            The majority of samples sequenced are residual diagnostic samples from the
-            <a class="btn-link" href="#">Broad's large scale testing platform</a>. Many of these samples
-            come from Massachusetts and the Northeast region more broadly. We also 
-            receive samples from external contributors including hospitals, public
-            health departments, diagnostic labs and research labs.
+            Currently, the majority of samples sequenced are residual diagnostic samples 
+            from the Broad’s large scale COVID-19 testing platform. Many of these come 
+            from Massachusetts and the Northeast region more broadly. We also receive samples 
+            from external collaborators including hospitals, public health departments, 
+            diagnostic labs, and research labs.
           </div>
         </div>
       </div>
@@ -87,18 +68,12 @@
 
     <div class="flex-row">
       <div class="description">
-        <p>We are scaling our ability to sequence SARS-CoV-2 from COVID-positive 
-        diagnostic samples. Here we show the number of samples being processed 
-        each week at the Broad. We strive to generate and share data within 14 
-        days of sample collection. We work with public health officials and 
-        epidemiologists to ensure our sampling strategy is representative and 
-        provides useful information about priorities for the COVID-19 response.</p>
-
-        <p><strong>Note:</strong> These numbers reflect only samples sequenced at 
-        the Broad Institute and do not include samples sequenced by other 
-        sources. Numbers may differ from other public dashboards due to time 
-        lags in updating across multiple sites. This dashboard is updated 
-        weekly.</p>
+        <p>In response to the need for COVID-19 genomic surveillance we have scaled our 
+          ability to sequence SARS-CoV-2 from positive diagnostic samples. Here, we show 
+          the numbers of samples sequenced at the Broad weekly, and cumulatively. We 
+          strive to generate data in real time and share the findings with state public 
+          health officials and the CDC. We also share the genomic data immediately in 
+          public databases for the scientific community to access.</p>
 
         <p>For complete reporting of variants, please visit the <a class="btn-link bold" href="#">
           CDC - US COVID-19 Cases Caused by Variants
@@ -137,38 +112,20 @@
   <div class="content">
     <h2>COVID-19 variant tracking</h2>
 
-    <p><a class="btn-link" href="#"><i class="fa fa-external-link"></i> CDC.gov SARS-CoV-2 Variant Classifications and Definitions</a></p>
+    <p>We are tracking known Variants of Concern and Variants of Interest 
+    as defined by the CDC. Here we report the proportion of known 
+    variants detected in viruses sequenced at the Broad, by week. We are 
+    also monitoring the genomic data for the possible emergence of new 
+    variants worthy of additional investigation.</p>
 
-    <div class="margin-top-5">
-      The CDC defines SARS-Cov-2 variants according to three classes:
-    
-      <div class="margin-top-15 margin-bottom-15">
-        <strong>
-          Variant of Interest<br/>
-          Variant of Concern<br/>
-          Variant of High Consequence<br/>
-        </strong>
-      </div>
-    </div>
+    <p class="label subtitle">Note: These do not include data from other sources, numbers may 
+    differ from other public dashboards due to time lags in updating 
+    across multiple sites. This dashboard is updated weekly.</p>
 
-    <div>
-      Currently the B.1.1.7, B.1.351, B.1.427, and B.1.429 variants circulating in the 
-      United States are classified as Variants of Concern.<br/>
-      The B.1.525, B.1.526, and P.2 viral lineages are classified as Variants of Interest.
-    </div>
-
-    <p>As of now there are no viral lineages classified as Variants of High Consequence. 
-      We are tracking known Variants or Concern and of Interest. The numbers of each detected 
-      are reported here. We are also monitoring the genomic data for new variants worthy of 
-      additional investigation and monitoring as possible emerging threats.</p>
-
-    <p><strong>Note:</strong> These numbers reflect only samples sequenced at the Broad 
-      Institute and do not include samples sequenced by other sources. Numbers may differ 
-      from other public dashboards due to time lags in updating across multiple sites. This 
-      dashboard is updated weekly.</p>
-
-    <p>For complete reporting of variants, please visit the <a class="btn-link bold" href="#">CDC - US COVID-19 
-      Cases Caused by Variants</a></p>
+    <p>See <a href="https://covid.cdc.gov/covid-data-tracker/#datatracker-home">here</a> 
+    for the CDC’s overview of these variants, and official reports on their numbers 
+    by state combined across all data sources. Note that currently there are no 
+    “Variants of High Consequence” as defined by the CDC.</p>
   </div>
 </div>
 
@@ -243,22 +200,11 @@
 </div>
 
 <div id="acknowledgments-container" class="content-container content-container-black">
-  <div class="content">
-    <img src="{{ env.assetPath }}assets/images/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
-
-    <h2>Acknowledgements</h2>
-    <div class="flex-row">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
-
-      <p>
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
-        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-        officia deserunt mollit anim id est laborum.
-      </p>
+  <div class="content flex-row">
+    <div></div>
+    <div>
+      Supported by<br/>
+      <img src="{{ env.assetPath }}assets/images/cdc-logo.png" alt="CDC: Centers for Disease Control and Prevention">
     </div>
   </div>
 </div>
