updated variants to use actual data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,9 +75,10 @@
           health officials and the CDC. We also share the genomic data immediately in 
           public databases for the scientific community to access.</p>
 
-        <p>For complete reporting of variants, please visit the <a class="btn-link bold" href="#">
-          CDC - US COVID-19 Cases Caused by Variants
-        </a></p>
+        <p>For complete reporting of variants, please visit the 
+          <a class="btn-link bold" href="https://www.cdc.gov/coronavirus/2019-ncov/variants/variant-cases.html">
+          CDC - US COVID-19 Cases Caused by Variants</a>
+        </p>
       </div>
 
       <div class="flex-col margin-top-20">
@@ -122,7 +123,7 @@
     differ from other public dashboards due to time lags in updating 
     across multiple sites. This dashboard is updated weekly.</p>
 
-    <p>See <a href="https://covid.cdc.gov/covid-data-tracker/#datatracker-home">here</a> 
+    <p>See <a class="btn-link bold" href="https://covid.cdc.gov/covid-data-tracker/#datatracker-home">here</a> 
     for the CDC’s overview of these variants, and official reports on their numbers 
     by state combined across all data sources. Note that currently there are no 
     “Variants of High Consequence” as defined by the CDC.</p>
