updated last updated value

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   
     <div class="stat-box">
       <div class="label">Last Updated:</div>
-      <div class="value">04/19/21</div>
+      <div class="value">{{ data.lastUpdated }}</div>
       <div class="detail">Updated Weekly</div>
     </div>
   
